made management page and displayed date
